--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
 </head>
 
 <body>
-    <div class="game-grid">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+    <div class="display" id="display">
+        <div class="board" id="board">
+            <div class="cell x" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+        </div>
+    </div>
+    
+    <div class="game-result" id="gameResult">
+        <div data-result-text></div>
+        <button id="reset">Reset</button>
     </div>
 </body>
 
