--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="display" id="display">
-        <div class="board" id="board">
+        <div class="board x" id="board">
             <div class="cell x" data-cell></div>
             <div class="cell circle" data-cell></div>
             <div class="cell" data-cell></div>
@@ -25,9 +25,9 @@
         </div>
     </div>
     
-    <div class="game-result" id="gameResult">
-        <div data-result-text></div>
-        <button id="reset">Reset</button>
+    <div class="display-winner" id="displayWinner">
+        <div data-winner-text>X Wins!</div>
+        <button id="restartButton">Restart</button>
     </div>
 </body>
 
