--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="display" id="display">
         <div class="board" id="board">
-            <div class="cell x" data-cell></div>
-            <div class="cell x" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
             <div class="cell" data-cell></div>
             <div class="cell" data-cell></div>
             <div class="cell" data-cell></div>
@@ -25,7 +25,7 @@
         </div>
     </div>
     
-    <div class="display-winner show" id="displayWinner">
+    <div class="display-winner" id="displayWinner">
         <div data-winner-text>X Wins!</div>
         <button id="restartButton">Restart</button>
     </div>
