add win detection and display game result

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     
     <div class="display-winner" id="displayWinner">
-        <div data-winner-text>X Wins!</div>
+        <div data-winner-text></div>
         <button id="restartButton">Restart</button>
     </div>
 </body>
